syntax = "proto3";
package nova.content_service.v2;

// Minimal content-service surface used by feed-service and social integrations.

enum ContentStatus {
  CONTENT_STATUS_UNSPECIFIED = 0;
  CONTENT_STATUS_DRAFT = 1;
  CONTENT_STATUS_PUBLISHED = 2;
  CONTENT_STATUS_MODERATED = 3;
  CONTENT_STATUS_DELETED = 4;
}

enum Visibility {
  VISIBILITY_UNSPECIFIED = 0;
  VISIBILITY_PUBLIC = 1;
  VISIBILITY_FOLLOWERS = 2;
  VISIBILITY_PRIVATE = 3;
}

message Post {
  string id = 1;
  string author_id = 2;
  string content = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  int64 deleted_at = 6;
  ContentStatus status = 7;
}

message CreatePostRequest {
  string author_id = 1;
  string content = 2;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest { string post_id = 1; }
message GetPostResponse {
  Post post = 1;
  bool found = 2;
}

message GetPostsByIdsRequest { repeated string post_ids = 1; }
message GetPostsByIdsResponse {
  repeated Post posts = 1;
  repeated string not_found_ids = 2;
}

message GetUserPostsRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  ContentStatus status = 4;
}

message GetUserPostsResponse {
  repeated Post posts = 1;
  int32 total_count = 2;
  bool has_more = 3;
}

message ListRecentPostsRequest {
  int32 limit = 1;
  string exclude_user_id = 2;
}
message ListRecentPostsResponse { repeated string post_ids = 1; }

message ListTrendingPostsRequest {
  int32 limit = 1;
  string exclude_user_id = 2;
}
message ListTrendingPostsResponse { repeated string post_ids = 1; }

message UpdatePostRequest {
  string post_id = 1;
  string content = 2;
  Visibility visibility = 3;
  bool comments_enabled = 4;
}
message UpdatePostResponse { Post post = 1; }

message DeletePostRequest {
  string post_id = 1;
  string user_id = 2;
}
message DeletePostResponse {
  string post_id = 1;
  int64 deleted_at = 2;
}

// ============================================================================ 
// Channels (category/interest definition)
// ============================================================================
message Channel {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  uint32 subscriber_count = 5;
}

message ListChannelsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string category = 3;
}

message ListChannelsResponse {
  repeated Channel channels = 1;
  int32 total = 2;
}

message GetChannelRequest {
  string id = 1;
}

message GetChannelResponse {
  Channel channel = 1;
  bool found = 2;
}

service ContentService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  rpc GetPostsByIds(GetPostsByIdsRequest) returns (GetPostsByIdsResponse);
  rpc GetUserPosts(GetUserPostsRequest) returns (GetUserPostsResponse);
  rpc ListRecentPosts(ListRecentPostsRequest) returns (ListRecentPostsResponse);
  rpc ListTrendingPosts(ListTrendingPostsRequest) returns (ListTrendingPostsResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);

  // Channels
  rpc ListChannels(ListChannelsRequest) returns (ListChannelsResponse);
  rpc GetChannel(GetChannelRequest) returns (GetChannelResponse);
}
